--- a/Buddies/Buddies.entitlements
+++ b/Buddies/Buddies.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.cisco.webex-ios-sdk.Sweetie</string>
+		<string>group.com.cisco.webexsdk.Sweetie</string>
 	</array>
 </dict>
 </plist>
