--- a/BuddiesBroadcastExtension/BuddiesBroadcastExtension.entitlements
+++ b/BuddiesBroadcastExtension/BuddiesBroadcastExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.cisco.webex-ios-sdk.Sweetie</string>
+		<string>group.com.cisco.webexsdk.Sweetie</string>
 	</array>
 </dict>
 </plist>
